--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,9 @@
 extend layout
 
+block header
 
 block content
-  svg#landing
+  svg#mountain
   #title TRIANGLES
   .instructions
     h2 How to play:
@@ -16,19 +17,23 @@ block content
       li Your mining area will regenerate with new items every 30 minutes.
       li If you want to put your items on display, you can select one of each type and drag it around into your favorite spot.
 
-  section.form
+  section.home.form
     form(method='post', action='/login', class='login')
       h1 Sign in or&#xa0;
         a(href='/signup') Join
       if error
         p.errors= error
-      h2 Email
-      input(type='email', name='email', placeholder='your@email.com', required)
-      h2 Password
-      input(type='password', name='password', placeholder='password', required)
+      .group
+        h2 Email
+        input(type='email', name='email', placeholder='your@email.com', required)
+      .group
+        h2 Password
+        input(type='password', name='password', placeholder='password', required)
       input(type='hidden', name='crumb', value='#{crumb}')
-      button(type='submit') sign in
-      a(href='/password/forgot', class='forgot') forgot password?
+      .group
+        button(type='submit') sign in
+      .group
+        a(href='/password/forgot', class='forgot') forgot password?
 
 block script
   script(src='/thirdparty.min.js')
