--- a/views/reset_password.jade
+++ b/views/reset_password.jade
@@ -14,3 +14,7 @@ block content
       button(type='submit') send
     if error
       p.errors= error
+
+block script
+  script(src='/thirdparty.min.js')
+  script(src='/nosession.bundle.js')
