--- a/views/forgot_password.jade
+++ b/views/forgot_password.jade
@@ -12,3 +12,7 @@ block content
       input(type='email', name='email')
       input(type='hidden', name='crumb', value='#{crumb}')
       button(type='submit') send
+
+block script
+  script(src='/thirdparty.min.js')
+  script(src='/nosession.bundle.js')
