--- a/views/join.jade
+++ b/views/join.jade
@@ -14,3 +14,7 @@ block content
       input(type='password', name='password', placeholder='password', required)
       input(type='hidden', name='crumb', value='#{crumb}')
       button(type='submit') go
+
+block script
+  script(src='/thirdparty.min.js')
+  script(src='/nosession.bundle.js')
