fixed svg bug in webkit

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -16,8 +16,8 @@ block content
 
     #mining-area
       if owner
-        img#vehicle
-        img.hole.fade
+        #vehicle
+        .hole.fade
 
     if owner
       #collection
