--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html
           #menu
             if session
               a(href='/dashboard') Back to △
+              a(href='/worlds') Visit other worlds
               a(href='/settings') Settings
               a(href='/logout') Sign out
             else
