--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ html
               a(href='/logout') Sign out
             else
               a(href='/') Back to /
+              a(href='/worlds') Visit other worlds
 
     #wrapper
       .inner
