fixed tests; fixed displayable

--- a/views/error_layout.jade
+++ b/views/error_layout.jade
@@ -5,7 +5,7 @@ html
   +head(analytics)
   body.error
     header
-      a.header(href='/') what we like
+      a.header(href='/') triangles.link
 
     #wrapper
       .inner
