--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -37,6 +37,12 @@ block content
       #collection
       #builder
   #notification
+  if firstVisit
+    .arrow-content
+      #arrow
+      #arrow-tip
+        p Scroll down and click on the vehicle to start mining.
+        p Use your arrow keys to navigate.
 
 block footer
   footer
